<resources>
    <string name="app_name">FitnesApp</string>
    <string name="slogan">На пути к совершенству</string>
    <string name="day">Day</string>
    <string name="exercises">Exercises</string>
    <string name="waiting_text">Exercises will start in:</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="complete">Complete</string>
    <string name="completed">Completed</string>
    <string name="day_done">Day is done</string>
    <string name="done">Done</string>
    <string name="rest">Rest:</string>
    <string name="rest_days">Rest days</string>
    <string name="clean">Reset </string>
    <string name="back">Back</string>
    <string name="alert">Attention!</string>
    <string name="cancel">Cancel</string>
    <string name="a_reset_all_data">Are you sure you want to reset all your progress, including weight history and statistics? If you proceed, you wont be able to recover them!</string>
    <string name="a_reset_progress">Are you sure you want to reset all your progress? If so, you will lose all your progress.!</string>
    <string name="a_reset_weight">Are you sure you want to reset all your weight history? If so, you will lose all your weight records!</string>
    <string name="a_reset_statistic">Are you sure you want to reset all your statistics? If you proceed, you wont be able to recover them!</string>
    <string name="reset_day_massage">Do you want to reset this day and redo the exercises?</string>
    <string name="b_reset_progress">Reset progress</string>
    <string name="b_reset_weight">Reset weight</string>
    <string name="b_reset_statistic">Reset statistic</string>
    <string name="b_reset_all_data">Reset all data</string>
    <string name="delete_day">Are you sure you want to delete this day?</string>
    <string name="exercises_e">Exercise:</string>
    <string name="added">Added:</string>
    <string name="selected_exercise_count">Selected exercise count:</string>
    <string name="selected_exercise_count0">Selected exercise count: 0</string>
    <string name="custom_day_list">Custom days list</string>
    <string name="exercise_count">Exercise count:</string>
    <string name="all_exercises">All Exercises</string>
    <string name="ex_count">Exercises count:</string>
    <string name="next_ex_is">Relax. Next Exercise is:</string>
    <string name="prepare_text">Prepare. Next Exercise is:</string>
    <string name="start_doing">Start doing the exercise.</string>
    <string name="progress">Progress:</string>
    <string name="times">Times:</string>
    <string name="seconds">Seconds:</string>
    <string name="nice_training">Nice training</string>
    <string name="exercise_day_finish">Exercise day finish</string>
    <string name="weight_field_is_empty">Weight field is Empty!</string>
    <string name="today">Today:</string>
    <string name="day_not_found">Error editing weight. Day not Found</string>


    <string name="easy">Easy</string>
    <string name="middle">Middle</string>
    <string name="hard">Hard</string>
    <string name="custom">Custom</string>


</resources>