<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DaysFragment">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="wrap_content"
                android:layout_height="158dp"
                android:layout_margin="4dp"
                android:layout_marginBottom="5dp"
                android:elevation="3dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="2dp"
                app:cardMaxElevation="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="405dp"
                        android:layout_height="158dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/days_frag1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/slogan"
                        android:textColor="@color/gray"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/imageView"
                        app:layout_constraintHorizontal_bias="0.497"
                        app:layout_constraintStart_toStartOf="@+id/imageView"
                        app:layout_constraintTop_toTopOf="@+id/imageView"
                        app:layout_constraintVertical_bias="0.008" />

                    <ProgressBar
                        android:id="@+id/pB"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="370dp"
                        android:layout_height="22dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:backgroundTint="#272727"
                        android:progress="50"
                        android:progressBackgroundTint="#040303"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/imageView"
                        app:layout_constraintStart_toStartOf="@+id/imageView" />

                    <TextView
                        android:id="@+id/tvRestDays"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:fontFamily="sans-serif"
                        android:text="Осталось 20 дней"
                        android:textColor="@color/gray"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/pB"
                        app:layout_constraintEnd_toEndOf="@+id/pB"
                        app:layout_constraintStart_toStartOf="@+id/pB" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/drawerAnim"
                        android:layout_width="45dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/ic_launcher_background"
                        app:layout_constraintStart_toStartOf="@+id/imageView"
                        app:layout_constraintTop_toTopOf="@+id/imageView"
                        app:lottie_fileName="drawerAnim.json" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcViewDays"
                android:layout_width="411dp"
                android:layout_height="631dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/gray"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="158dp"
                android:background="#000000"
                android:src="@drawable/tors" />

            <Button
                android:id="@+id/bReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="85dp"
                android:text="@string/clean"
                app:cornerRadius="16sp" />

            <Button
                android:id="@+id/back"
                android:layout_width="197dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="110dp"
                android:text="@string/back"
                app:cornerRadius="16sp" />

        </LinearLayout>

    </androidx.drawerlayout.widget.DrawerLayout>

</androidx.constraintlayout.widget.ConstraintLayout>